<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:keepScreenOn="true"
    tools:context=".AcknowledgeActivity">

    <Button
        android:id="@+id/offbutton"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm_off"
        android:drawableLeft="@drawable/ic_action_done"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/offbutton"
        android:layout_centerHorizontal="true"
        android:id="@+id/label"
        android:text="@string/filler"
        />
    <TextView
        android:layout_below="@id/offbutton"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/countdown"
        android:text="@string/filler"
        />

    <Button
        android:id="@+id/mark_typoed"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/typoed"
        android:drawableLeft="@drawable/ic_image_edit"
        />
    <Button
        android:id="@+id/mark_distracted"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/mark_typoed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distracted"
        />
    <Button
        android:id="@+id/mark_did_something_else"
        android:layout_above="@id/mark_typoed"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/did_something_else"
        />
    <Button
        android:id="@+id/mark_underestimated"
        android:layout_above="@id/mark_did_something_else"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/underestimated_time"
        />
    <Button
        android:id="@+id/mark_partial"
        android:layout_above="@id/mark_underestimated"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtask_done"
        />


</RelativeLayout>
