<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:keepScreenOn="true"
    tools:context="hamlah.pin.MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_prompt"/>
        <EditText
            android:id="@+id/timerminutes"
            android:inputType="number"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"/>
        <Button
            android:id="@+id/thebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_alarm"/>
        <Button
            android:id="@+id/stopbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_button"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bother_countdown"
            />
        <Button
            android:id="@+id/acknowledgebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acknowledge"
            android:visibility="gone"
            />
    </LinearLayout>
</RelativeLayout>
